use Panama instead of JNA for native calls